.sisyphus/evidence/task-1-selector-compiles.txt
install
+- install quotez
   +- compile exe quotez Debug native 1 errors
src/servers/tcp.zig:8:17: error: root source file struct 'std' has no member named 'net'
    socket: std.net.Server,
                ^~~
/home/fulgidus/.zvm/master/lib/std/std.zig:1:1: note: struct declared here
pub const ArrayHashMap = array_hash_map.ArrayHashMap;
^~~
referenced by:
    TcpServer: src/servers/tcp.zig:7:23
    main: src/main.zig:73:35
    4 reference(s) hidden; use '-freference-trace=6' to see all references
error: 1 compilation errors
failed command: /home/fulgidus/.zvm/master/zig build-exe -ODebug -Mroot=/home/fulgidus/Documents/quotez/src/main.zig -lc --cache-dir .zig-cache --global-cache-dir /home/fulgidus/.cache/zig --name quotez --zig-lib-dir /home/fulgidus/.zvm/master/lib/ --listen=-

Build Summary: 0/3 steps succeeded (1 failed)
install transitive failure
+- install quotez transitive failure
   +- compile exe quotez Debug native 1 errors

error: the following build command failed with exit code 1:
.zig-cache/o/a8e4908e6baceafa9a9590eb6ffdd352/build /home/fulgidus/.zvm/master/zig /home/fulgidus/.zvm/master/lib /home/fulgidus/Documents/quotez .zig-cache /home/fulgidus/.cache/zig --seed 0xa3d89ced -Zbf42eb294a79d9b0
